# cmocka-cmake-example

./: CMakeLists.txt  Licence  Readme.md  main.c
